--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Ubuntu:wght@300;400;500;700&display=swap');
+#down h3{
+  font-family: 'Great Vibes', cursive;
+  font-weight:600;
+}
 /* CSS Reset */
 *,
 *::after,
